2011-08-03  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-int.h (lra_get_mode): Remove.

	* lra-constraints.c (find_mode, get_op_mode): New.
	(match_reload, curr_insn_transform, process_alt_operands): Use
	get_op_mode instead of lra_get_mode.

2011-08-02  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-assigns.c (find_hard_regno_for): Don't do hard register
	usage leveling for targets with conditional execution.

2011-07-29  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (LOSER_COST_FACTOR, MAX_OVERALL_COST_BOUND):
	New macros.
	(process_alt_operands): Use the macros.  Adjust losers and
	overall for reloads becuase of early clobbers.
	(curr_insn_transform): Use MAX_OVERALL_COST_BOUND.
	(lra_constraints): Fix typo with parentheses.

	* lra-lives.c (process_bb_lives): Permit creation of copies
	involving all new pseudos.

	* lra-assigns.c (curr_update_hard_regno_preference_check): New variable.
	(update_hard_regno_preference_check): Ditto.
	(update_hard_regno_preference): New function.
	(lra_setup_reg_renumber): Use update_hard_regno_preference.
	(assign_by_spills): Initialize update_hard_regno_preference_check
	and curr_update_hard_regno_preference_check.

2011-07-26  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-assign.c (setup_live_pseudos_and_spill_after_equiv_moves):
	Remove the dead code.

	* lra-constraints.c (goal_alternative*): Rename to goal_alt...
	(goal_early_clobbered_nops_num, goal_early_clobbered_nops):
	Remove.
	(goal_alt_dont_inherit_ops_num, goal_alt_dont_inherit_ops): New
	static variables.
	(uses_hard_regs_p): New function.
	(process_alt_operands): Rename curr_alternative to curr_alt...
	Rename curr_early_clobbered_regs[_num] to
	early_clobbered_regs[_num].  Add code for matching with early
	clobber.  Add code to process and evaluate conflicts with early
	clobbers.  Set up goal_alt_dont_inherit_ops_num,
	goal_alt_dont_inherit_ops.
	(early_clobber_reload_regs_num, early_clobber_reload_regs):
	Remove.